Add section book restaurant

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <!-- FONT QUICKSAND -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- FONT PACIFICO -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
@@ -82,7 +86,42 @@
     </header>
     <section class="dinerCarousel"></section>
     <section class="about"></section>
-    <section class="book"></section>
+    <section class="book">
+        <div class="row">
+          <div class="col-6">
+            <div class="book__banner">
+                <div class="book__img"></div>
+            </div>
+          </div>
+          <div class="col-6 px-4 py-3 py-3">
+            <div class="book__content p-md-5 p-3">
+                <div class="title">
+                    <p>More than 3000 Restaurants</p>
+                    <h1>Book a table easily at the best price</h1>
+                </div>
+                <div class="content">
+                    <p>Vestibulum ante ipsum primis in faucibus orci luctus turpis sodales quis. Integer sit amet mattis quam.Vivamus a ligula quam tesque et libero ut justo ultrices in.</p>
+                </div>
+                <div class="book__comment mt-5">
+                   <div class="book__deals">
+                        <i class="fa fa-thumbs-up mb-4"></i>
+                        <a href="#">
+                            Best Deals
+                        </a>
+                        <p class="mt-2">Lorem ipsum viverra feugiat. Pellen tesque libero justo.</p>
+                   </div>
+                   <div class="book__food pl-5">
+                        <i class="fa fa-utensils mb-4"></i>
+                        <a href="#">
+                            Best Food
+                        </a>
+                        <p class="mt-2">Lorem ipsum viverra feugiat. Pellen tesque libero justo.</p>
+                   </div>
+                </div>
+            </div>
+          </div>
+        </div>
+    </section>
     <section class="news"></section>
     <section class="type"></section>
     <section class="number"></section>
