xay dung xong carousel chưa test responsive

--- a/index.html
+++ b/index.html
@@ -85,7 +85,17 @@
             </div>
         </div>
     </header>
-    <section class="dinerCarousel"></section>
+    <section class="dinerCarousel">
+        <div class="dinerCarousel_content">
+            <h3>The Only Thing We Love More Than Food Is You!</h3>
+            <p>Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.Ea ipsum sed consequuntur illum
+                facere.</p>
+            <div class="btn-carousel">
+                <span>Read More</span>
+                <i class="fa fa-angle-right"></i>
+            </div>
+        </div>
+    </section>
     <section class="about"></section>
     <section class="book">
         <div class="row">
