--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
     </header>
     <section class="dinerCarousel">
-        <div class="dinerCarousel_content">
+        <div class="dinerCarousel__content">
             <h3>The Only Thing We Love More Than Food Is You!</h3>
             <p>Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.Ea ipsum sed consequuntur illum
                 facere.</p>
@@ -96,7 +96,24 @@
             </div>
         </div>
     </section>
-    <section class="about"></section>
+    <section class="about">
+        <div class="container">
+            <div class="row align-items-center ">
+                <div class="col-sm-4">
+                    <div class="about__content">
+                        <h6>About US</h6>
+                        <h3>We found our creative space that is open for you.</h3>
+                    </div>
+                </div>
+                <div class="col-sm-8">
+                    <div class="about__content">
+                        <p>Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet elit. Non quae, fugiat nihil ad. Lorem ipsum dolor sit amet. Lorem ipsum init dolor sit, amet elit. Dolor ipsum non velit, culpa!Lorem ipsum init dolor sit.</p>
+                        <p>Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet elit. Non quae, fugiat nihil ad. Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="book">
         <div class="row">
             <div class="col-6">
