Doing the news section

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
         <div class="container py-md-5">
             <div class="row content-1-grids align-items-center ">
                 <div class="col-5 content-1-left">
-                    <div class="about__content">
-                        <h6>About US</h6>
-                        <h3>We found our creative space that is open for you.</h3>
+                    <div class="title">
+                        <p>About Us</p>
+                        <h1>We found our creative space that is open for you.</h1>
                     </div>
                 </div>
                 <div class="col-7 content-1-right pl-lg-5 mt-lg-0 mt-3">
@@ -166,7 +166,7 @@
         <div class="container">
             <div class="title mb-5">
                 <p>What's New</p>
-                <h1>Popular Categories</h1>
+                <h1 class="mb-5">Popular Categories</h1>
             </div>
             <div class="row">
                 <div class="col-4">
@@ -210,7 +210,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-4 mt-4 pt-2">
                     <div class="news__image">
                         <a href="#">
                             <img src="./img/g4.jpg">
@@ -223,7 +223,7 @@
                         <p>$550</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 mt-4 pt-2">
                     <div class="news__image">
                         <a href="#">
                             <img src="./img/g5.jpg">
@@ -236,7 +236,7 @@
                         <p>$750</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 mt-4 pt-2">
                     <div class="news__image">
                         <a href="#">
                             <img src="./img/g6.jpg">
