--- a/index.html
+++ b/index.html
@@ -538,9 +538,9 @@
             <div class="row footer__content">
                 <div class="col-4">
                     <div class="footer__dinner">
-                        <h3>
+                        <h2>
                             <a href="http://">Diner</a>
-                        </h3>
+                        </h2>
                     </div>
                     <p>Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at
                         tempufddfel. Lorem ipsum dolor sit amet Semper at elit.</p>
@@ -564,21 +564,25 @@
                     <h2>
                         Usefull Links
                     </h2>
-                    <a href="http://">About Us</a>
-                    <a href="http://">Services</a>
-                    <a href="http://">Blog posts</a>
-                    <a href="http://">Careers</a>
-                    <a href="http://">Contact us</a>
+                    <ul>
+                        <li><a href="http://">About Us</a></li>
+                        <li><a href="http://">Services</a></li>
+                        <li><a href="http://">Blog posts</a></li>
+                        <li><a href="http://">Careers</a></li>
+                        <li><a href="http://">Contact us</a></li>
+                    </ul> 
                 </div>
                 <div class="col-2">
                     <h2>
                         More Info
                     </h2>
-                    <a href="http://">History</a>
-                    <a href="http://">Vision & Values</a>
-                    <a href="http://">Blog posts</a>
-                    <a href="http://">Awards</a>
-                    <a href="http://">Media</a>
+                    <ul>
+                        <li><a href="http://">History</a></li>
+                        <li><a href="http://">Vision & Values</a></li>
+                        <li><a href="http://">Blog posts</a></li>
+                        <li><a href="http://">Awards</a></li>
+                        <li><a href="http://">Media</a></li>
+                    </ul>
                 </div>
                 <div class="col-4">
                     <h2>
@@ -590,7 +594,7 @@
                             <input type="email" class="form-control" id="exampleInputEmail1"
                                 aria-describedby="emailHelp" placeholder="Your Email Address">
                         </div>
-                        <button class="btn btn-primary">Submit</button>
+                        <button class="btn btn-footer">Subcise Now</button>
                     </form>
                 </div>
             </div>
