--- a/index.html
+++ b/index.html
@@ -718,8 +718,32 @@
                     </form>
                 </div>
             </div>
+            <div class="footer__last">
+                <div class="footer__last1">
+                    <span>© 2021 Diner. All rights reserved. Design by </span> 
+                    <a href="http://">W3Layouts</a>
+                </div>
+                <div class="footer__last2">
+                    <a href="http://">Careers</a>
+                    <a href="http://">Privacy Policy</a>
+                    <a href="http://">Contact us</a>
+                </div>
+            </div>
         </div>
     </footer>
+
+    <!-- back to top  -->
+    <a href="#" class="backtotop cd-top text-replace js-cd-top">
+        <div class="backToTop__icon">
+            <i class="fa fa-arrow-up"></i>
+        </div>
+    </a>
+
+
+
+
+
+
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -787,6 +811,10 @@
             });
         });
     </script>
+
+    <!-- BACKTOTOP  -->
+    <script src="./JS/util.js"></script>
+    <script src="./JS/main-backToTop.js"></script>
 </body>
 
 </html>
