--- a/index.html
+++ b/index.html
@@ -813,8 +813,8 @@
     </script>
 
     <!-- BACKTOTOP  -->
-    <script src="./JS/util.js"></script>
-    <script src="./JS/main-backToTop.js"></script>
+    <script src="./js/util.js"></script>
+    <script src="./js/main-backToTop.js"></script>
 </body>
 
 </html>
