--- a/index.html
+++ b/index.html
@@ -718,6 +718,9 @@
                     </form>
                 </div>
             </div>
+            <div class="footer__hr">
+                <hr color="#444342"> 
+            </div>
             <div class="footer__last">
                 <div class="footer__last1">
                     <span>© 2021 Diner. All rights reserved. Design by </span> 
@@ -735,7 +738,7 @@
     <!-- back to top  -->
     <a href="#" class="backtotop cd-top text-replace js-cd-top">
         <div class="backToTop__icon">
-            <i class="fa fa-arrow-up"></i>
+            ⤴
         </div>
     </a>
 
