Responsive for news section

--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
     </section>
     <section class="book">
         <div class="row">
-            <div class="col-lg-6 col-sm-12 mt-lg-4">
+            <div class="col-lg-6 col-sm-12 my-lg-4 mt-xl-0 mx-xl-0 my-xl-0">
                 <div class="book__banner">
                     <div class="book__img"></div>
                 </div>
             </div>
             <div class="col-lg-6 col-sm-12 py-3 py-3">
-                <div class="book__content p-md-5 p-3">
+                <div class="book__content p-5 p-3">
                     <div class="title">
                         <p>More than 3000 Restaurants</p>
                         <h1>Book a table easily at the best price</h1>
@@ -173,7 +173,7 @@
                 <h1 class="mb-5">Popular Categories</h1>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-6 col-lg-4 mt-4">
                     <div class="news__image">
                         <a href="#">
                             <img src="./img/g1.jpg" alt="g1">
@@ -186,7 +186,7 @@
                         <p>$350</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-6 col-lg-4 mt-4">
                     <div class="news__image">
                         <a href="#">
                             <img src="./img/g2.jpg" alt="g2">
@@ -199,7 +199,7 @@
                         <p>$550</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-6 col-lg-4 mt-4">
                     <div class="news__image">
                         <a href="#">
                             <img src="./img/g3.jpg" alt="g3">
@@ -212,9 +212,7 @@
                         <p>$650</p>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-4 mt-4 pt-2">
+                <div class="col-6 col-lg-4 mt-4">
                     <div class="news__image">
                         <a href="#">
                             <img src="./img/g4.jpg" alt="g4">
@@ -227,7 +225,7 @@
                         <p>$550</p>
                     </div>
                 </div>
-                <div class="col-4 mt-4 pt-2">
+                <div class="col-6 col-lg-4 mt-4">
                     <div class="news__image">
                         <a href="#">
                             <img src="./img/g5.jpg" alt="g5">
@@ -240,7 +238,7 @@
                         <p>$750</p>
                     </div>
                 </div>
-                <div class="col-4 mt-4 pt-2">
+                <div class="col-6 col-lg-4 mt-4">
                     <div class="news__image">
                         <a href="#">
                             <img src="./img/g6.jpg" alt="g6">
@@ -744,11 +742,6 @@
             ⤴
         </div>
     </a>
-
-
-
-
-
 
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
