--- a/index.html
+++ b/index.html
@@ -363,11 +363,11 @@
             <div class="number__text">
                 <h1>Deliciousness jumping into the mouth.</h1>
                 <div class="number__button mt-5">
-                    <a href="#" class="button1 mr-4">
+                    <a href="#" class="button1 mr-sm-2 mr-lg-4">
                         Read More
                         <i class="fa fa-angle-right"></i>
                     </a>
-                    <a href="#" class="button2 mr-4">
+                    <a href="#" class="button2 mr-sm-2 mr-lg-4">
                         Contact Us
                         <i class="fa fa-angle-right"></i>
                     </a>
@@ -376,7 +376,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-3">
+                <div class="col-6 col-md-3">
                     <div class="number__bg">
                         <div class="number__icon mb-3">
                             <i class="fa fa-building"></i>
@@ -388,7 +388,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-6 col-md-3">
                     <div class="number__bg">
                         <div class="number__icon mb-3">
                             <i class="fa fa-utensils"></i>
@@ -400,7 +400,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-6 col-md-3">
                     <div class="number__bg">
                         <div class="number__icon mb-3">
                             <i class="fa fa-users"></i>
@@ -412,7 +412,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-6 col-md-3">
                     <div class="number__bg">
                         <div class="number__icon mb-3">
                             <i class="fa fa-smile"></i>
@@ -548,7 +548,7 @@
             </div>
         </div>
     </section>
-    <section class="testimonial my-5 py-5">
+    <section class="testimonial my-5 py-3 py-lg-5 ">
         <div class="testimonial__content container">
             <div class="title">
                 <p>Testimonials</p>
