--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
     <section class="about">
         <div class="container py-md-5">
             <div class="row content-1-grids align-items-center ">
-                <div class="col-5 content-1-left">
+                <div class="col-md-12 col-lg-5 col-xl-5 content-1-left">
                     <div class="title">
                         <p>About Us</p>
                         <h1>We found our creative space that is open for you.</h1>
                     </div>
                 </div>
-                <div class="col-7 content-1-right pl-lg-5 mt-lg-0 mt-3">
+                <div class="col-md-12 col-lg-7 col-xl-7 content-1-right pl-lg-5 mt-lg-0 mt-3">
                     <div class="about__content">
                         <p>Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at
                             tempufddfel. Lorem ipsum dolor sit amet elit. Non quae, fugiat nihil ad. Lorem ipsum dolor
@@ -260,7 +260,7 @@
     <section class="type py-5">
         <div class="container py-5 ">
             <div class="row">
-                <div class="col-4 my-3">
+                <div class="col-lg-4 col-md-6 col-sm-12 my-3">
                     <div class="type__content">
                         <div class="type__wrap">
                             <div class="type__icon">
@@ -276,7 +276,7 @@
                         <p class="mt-3">Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.</p>
                     </div>
                 </div>
-                <div class="col-4 my-3">
+                <div class="col-lg-4 col-md-6 col-sm-12  my-3">
                     <div class="type__content">
                         <div class="type__wrap">
                             <div class="type__icon">
@@ -292,7 +292,7 @@
                         <p class="mt-3">Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.</p>
                     </div>
                 </div>
-                <div class="col-4 my-3">
+                <div class="col-lg-4 col-md-6 col-sm-12  my-3">
                     <div class="type__content">
                         <div class="type__wrap">
                             <div class="type__icon">
@@ -308,7 +308,7 @@
                         <p class="mt-3">Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.</p>
                     </div>
                 </div>
-                <div class="col-4 my-3">
+                <div class="col-lg-4 col-md-6 col-sm-12  my-3">
                     <div class="type__content">
                         <div class="type__wrap">
                             <div class="type__icon">
@@ -324,7 +324,7 @@
                         <p class="mt-3">Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.</p>
                     </div>
                 </div>
-                <div class="col-4 my-3">
+                <div class="col-lg-4 col-md-6 col-sm-12  my-3">
                     <div class="type__content">
                         <div class="type__wrap">
                             <div class="type__icon">
@@ -340,7 +340,7 @@
                         <p class="mt-3">Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.</p>
                     </div>
                 </div>
-                <div class="col-4 my-3">
+                <div class="col-lg-4 col-md-6 col-sm-12  my-3">
                     <div class="type__content">
                         <div class="type__wrap">
                             <div class="type__icon">
@@ -454,7 +454,7 @@
                 <h1 class="mb-5">Blog Posts</h1>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="card">
                         <a href="http://">
                             <img src="./img/banner1.jpg" class="card-img-top" alt="...">
@@ -485,7 +485,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="card">
                         <a href="http://">
                             <img src="./img/banner3.jpg" class="card-img-top" alt="...">
@@ -516,7 +516,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="card">
                         <a href="http://">
                             <img src="./img/banner2.jpg" class="card-img-top" alt="...">
@@ -657,7 +657,7 @@
     <footer>
         <div class="container py-5">
             <div class="row footer__content">
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-7">
                     <div>
                         <a class="footer__dinner" href="#">Diner</a>
                     </div>
@@ -680,7 +680,7 @@
                     </div>
 
                 </div>
-                <div class="col-2">
+                <div class="col-lg-2 col-md-6 col-sm-5 col-6">
                     <h2>
                         Usefull Links
                     </h2>
@@ -692,7 +692,7 @@
                         <li><a href="http://">Contact us</a></li>
                     </ul>
                 </div>
-                <div class="col-2">
+                <div class="col-lg-2 col-md-6 col-sm-5 col-6">
                     <h2>
                         More Info
                     </h2>
@@ -704,7 +704,7 @@
                         <li><a href="http://">Media</a></li>
                     </ul>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 col-sm-7">
                     <h2>
                         Subscribe to our Newsletter
                     </h2>
@@ -721,12 +721,12 @@
             <div class="footer__hr">
                 <hr color="#444342"> 
             </div>
-            <div class="footer__last">
-                <div class="footer__last1">
+            <div class="row footer__last">
+                <div class="footer__last1 col-lg-8">
                     <span>© 2021 Diner. All rights reserved. Design by </span> 
                     <a href="http://">W3Layouts</a>
                 </div>
-                <div class="footer__last2">
+                <div class="footer__last2 col-lg-4">
                     <a href="http://">Careers</a>
                     <a href="http://">Privacy Policy</a>
                     <a href="http://">Contact us</a>
