git test reponsive

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
     </section>
     <section class="about">
-        <div class="container py-md-5">
+        <div class="container py-5 px-lg-0 py-md-5">
             <div class="row content-1-grids align-items-center ">
                 <div class="col-md-12 col-lg-5 col-xl-5 content-1-left">
                     <div class="title">
